# DEVO

./: LICENSE  README.md  USER_GUIDE.md  __init__.py  cli.py  devo.yaml  enrichment.py  pyproject.toml  setup.cfg  utils.py  validation.py
DEVO_output/: KCLT.icsv  KCLT_DEVO_report.md  KCLT_schema.json  airline_crashes.icsv  airline_crashes_DEVO_report.md  airline_crashes_schema.json  sample.icsv  sample_DEVO_report.md  sample_DEVO_report.txt  sample_expected.icsv  sample_expected_DEVO_report.md  sample_expected_schema.json  sample_schema.json
devo/: __init__.py  _infer.py  _parser.py  _report.py  _schema.py  cli.py  enrich.py  exceptions.py  validate.py  webui.py
devo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: sample.csv  sample_expected.icsv
package materials/: .coverage  config_example.yaml  pyprojects.toml  setup.py
package materials/devo.egg-info/: SOURCES.txt  requires.txt
package materials/tests/: test_enrichment.py  test_validation.py
py_devo.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_cli.py  test_enrich.py  test_enrichment.py  test_infer.py  test_parser.py  test_syntax_only.py  test_validate.py  test_validation.py
tests/fixtures/: all_types.csv  geodata.csv  invalid_data.icsv  invalid_data_schema.json  semicolon.csv  type_mismatch.icsv  type_mismatch_schema.json  with_missing.csv
