[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-devo"
version = "0.2.0"
description = "DEVO — CSV to iCSV enrichment and Frictionless validation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"

# frictionless v5 is supported (code uses basepath + Schema.from_descriptor for v5 compatibility).
dependencies = ["frictionless>=4.0.0"]

[project.optional-dependencies]
# Flask is a demo dependency only; the core pipeline does not need it.
webui = ["flask>=2.0.0"]

[project.scripts]
devo = "devo.cli:main"

[project.urls]
Source = "https://github.com/chasenunez/devo"

[tool.setuptools.packages.find]
include = ["devo*"]
